refactor(message): change Msg.content to List and implement Jackson serialization with type-safe API (#19)